<resources>
    <string name="app_name" translatable="false">Weatherial</string>
    <string name="app_version" translatable="false">v. 1.0</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="bullet" translatable="false">&#8226; </string>
    <string name="dagree_sign" translatable="false">°</string>
    <string name="shared_preferences_name_key" translatable="false">paweltypiak.weatherial.preference_file_key</string>
    <string name="shared_preferences_language_version_key" translatable="false">language_version_preferences_key</string>
    <string name="shared_preferences_units_key" translatable="false">units_preferences_key</string>
    <string name="shared_preferences_default_location_key" translatable="false">default_location_key</string>
    <string name="shared_preferences_is_first_location_geolocalization_key" translatable="false">is_first_location_geolocalization_key</string>
    <string name="shared_preferences_geolocalization_method_key" translatable="false">geolocalization_method_key</string>
    <string name="shared_preferences_is_first_launch_key" translatable="false">is_first_launch_key</string>
    <string name="shared_preferences_favourite_locations_names_key" translatable="false">favourites_locations_key</string>
    <string name="shared_preferences_favourite_locations_addresses_key" translatable="false">favourites_locations_addresses_key</string>
    <string name="extras_is_first_launch_key" translatable="false">is_first_launch_key</string>
    <string name="extras_selected_default_location_option_key" translatable="false">selected_default_location_option_key</string>
    <string name="extras_selected_geolocalization_method_key" translatable="false">selected_geolocalization_method_key</string>
    <string name="extras_different_location_name_key" translatable="false">different_location_name_key</string>
    <string name="extras_data_initializer_key" translatable="false">data_initializer_key</string>
    <string name="preferences_default_location_key" translatable="false">preferences_default_location_key</string>
    <string name="preferences_geolocalization_method_key" translatable="false">preferences_geolocalization_method_key</string>
    <string name="preferences_language_version_key" translatable="false">preferences_language_version_key</string>
    <string name="preferences_units_key" translatable="false">preferences_units_key</string>
    <string name="preferences_pressure_unit_key" translatable="false">preferences_pressure_units_key</string>
    <string name="preferences_speed_unit_key" translatable="false">preferences_speed_units_key</string>
    <string name="preferences_temperature_unit_key" translatable="false">preferences_temperature_unit_key</string>
    <string name="preferences_time_unit_key" translatable="false">preferences_time_unit_key</string>
    <string name="intro_activity_start_fragment_tag" translatable="false">intro_activity_start_fragment_tag</string>
    <string name="intro_activity_configuration_fragment_tag" translatable="false">intro_activity_configuration_fragment_tag</string>
    <string name="intro_activity_language_fragment_tag" translatable="false">intro_activity_language_fragment_tag</string>
    <string name="intro_activity_units_fragment_tag" translatable="false">intro_activity_units_fragment_tag</string>
    <string name="intro_activity_default_location_fragment_tag" translatable="false">intro_activity_default_location_tag</string>
    <string name="intro_activity_geolocaliztion_methods_fragment_tag" translatable="false">intro_activity_geolocaliztion_methods_fragment_tag</string>
    <string name="intro_activity_loading_fragment_tag" translatable="false">intro_activity_loading_fragment_tag</string>
    <string name="settings_activity_main_preferences_fragment_tag" translatable="false">settings_activity_main_preferences_fragment_tag</string>
    <string name="settings_activity_units_preferences_fragment_tag" translatable="false">settings_activity_units_preferences_fragment_tag</string>
    <string name="failure_dialog_title">Failure</string>
    <string name="service_failure_dialog_message">Empty reply from server, probably caused by temporary service failure. Try again later.</string>
    <string name="service_failure_dialog_positive_button">Refresh</string>
    <string name="service_failure_dialog_negative_button_type_0">Exit</string>
    <string name="service_failure_dialog_negative_button_type_1">Cancel</string>
    <string name="internet_failure_dialog_message">No internet connection!</string>
    <string name="internet_failure_dialog_positive_button">Refresh</string>
    <string name="internet_failure_dialog_negative_button_type_0">Exit</string>
    <string name="internet_failure_dialog_negative_button_type_1">Cancel</string>
    <string name="yahoo_redirect_dialog_title">Redirection</string>
    <string name="yahoo_redirect_dialog_message">You will be redirected to website:</string>
    <string name="yahoo_main_redirect_dialog_message_service_name" translatable="false">Yahoo.com</string>
    <string name="yahoo_weather_redirect_dialog_message_service_name" translatable="false">Yahoo Weather</string>
    <string name="yahoo_redirect_dialog_positive_button">Continue</string>
    <string name="yahoo_redirect_dialog_negative_button">Cancel</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Are you sure you want to leave <b>Weatherial</b>?</string>
    <string name="exit_dialog_positive_button">Exit</string>
    <string name="exit_dialog_negative_button">Cancel</string>
    <string name="feedback_dialog_title">Send feedback</string>
    <string name="feedback_dialog_message">If you have any questions or you want to express opinion, send me an email to address:</string>
    <string name="feedback_dialog_mail" translatable="false">weatherial.app@gmail.com</string>
    <string name="feedback_dialog_positive_button">Send</string>
    <string name="feedback_dialog_negative_button">Cancel</string>
    <string name="author_dialog_title">Author</string>
    <string name="author_dialog_mail_address" translatable="false">pawel.p.typiak@gmail.com</string>
    <string name="author_dialog_mail_description" translatable="false">E-mail</string>
    <string name="author_dialog_github" translatable="false">github.com/PawelTypiak</string>
    <string name="author_dialog_github_description" translatable="false">GitHub</string>
    <string name="author_dialog_negative_button">Cancel</string>
    <string name="no_email_application_dialog_title">Failure!</string>
    <string name="no_email_application_dialog_message">Unfortunately, there is no E-mail application available. Do you want to copy an address <b>pawel.p.typiak@gmail.com</b> to clipboard?</string>
    <string name="no_email_application_dialog_positive_button">Copy</string>
    <string name="no_email_application_dialog_negative_button">Cancel</string>
    <string name="search_dialog_title_type_0">Different Location</string>
    <string name="search_dialog_positive_button_type_0">Ok</string>
    <string name="search_dialog_title_type_1">Search</string>
    <string name="search_dialog_edit_text_hint">Enter location</string>
    <string name="search_dialog_positive_button_type_1">Search</string>
    <string name="search_dialog_negative_button">Cancel</string>
    <string name="no_weather_results_for_location_dialog_message">Empty reply from weather service - probably there is no weather information provided for this location</string>
    <string name="no_weather_results_for_location_dialog_negative_button_type_1_2">Cancel</string>
    <string name="no_weather_results_for_location_dialog_positive_button_type_0_1">Change location</string>
    <string name="no_weather_results_for_location_dialog_positive_button_type_2">refresh</string>
    <string name="no_weather_results_for_location_dialog_negative_button_type_0">Exit</string>
    <string name="weather_results_for_location_dialog_title">Search result</string>
    <string name="weather_results_for_location_dialog_message">Found location:</string>
    <string name="weather_results_for_location_dialog_negative_button_type_1">Cancel</string>
    <string name="weather_results_for_location_dialog_neutral_button">Change location</string>
    <string name="weather_results_for_location_dialog_positive_button">Continue</string>
    <string name="weather_results_for_location_dialog_negative_button_type_0">Exit</string>
    <string name="permission_denied_dialog_title">Access denied</string>
    <string name="permission_denied_dialog_positive_button_type_0">Change location</string>
    <string name="permission_denied_dialog_negative_button_type_0">Exit</string>
    <string name="permission_denied_dialog_negative_button_type_1">Cancel</string>
    <string name="permission_denied_dialog_positive_button_type_1">Try again</string>
    <string name="permission_denied_dialog_message">No permission for geolocalization!</string>
    <string name="geolocalization_failure_dialog_positive_button_type_0">Change location</string>
    <string name="geolocalization_failure_dialog_negative_button_type_0">Exit</string>
    <string name="geolocalization_failure_dialog_positive_button_type_1">Refresh</string>
    <string name="geolocalization_failure_dialog_negative_button_type_1">Cancel</string>
    <string name="geolocalization_failure_dialog_message">No possibility of finding current location!</string>
    <string name="no_different_location_selected_dialog_message">Enter location!</string>
    <string name="no_different_location_selected_dialog_positive_button">Ok</string>
    <string name="no_different_location_selected_dialog_negative_button">Cancel</string>
    <string name="maps_dialog_title">Redirection</string>
    <string name="maps_dialog_message">Do you want to open the following location?</string>
    <string name="maps_dialog_negative_button">Cancel</string>
    <string name="maps_dialog_positive_button">Continue</string>
    <string name="add_location_dialog_title">Save location</string>
    <string name="add_location_dialog_checkbox_message">set as default location</string>
    <string name="add_location_dialog_positive_button">Save</string>
    <string name="add_location_dialog_negative_button">Cancel</string>
    <string name="edit_location_dialog_header_edit_text_hint">Header location name</string>
    <string name="edit_location_dialog_subheader_edit_text_hint">Subheader location name</string>
    <string name="intro_activity_language_version_header">Select language version:</string>
    <string name="language_version_english">English</string>
    <string name="language_version_polish">Polish</string>
    <string name="nav_drawer_locations_group_item">Locations</string>
    <string name="nav_drawer_others_group_item">Others</string>
    <string name="nav_drawer_geolocalization">Geolocalization</string>
    <string name="nav_drawer_favourites">Favourites</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_feedback">Send feedback</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_drawer_author">Author</string>
    <string name="preferences_geolocalization_method_title">Geolocalization method</string>
    <string name="preferences_language_version_title">Language version</string>
    <string name="preferences_units_title">Units</string>
    <string name="preferences_units_summary">Select measurement system</string>
    <string name="preferences_units_temperature_title">Temperature</string>
    <string name="preferences_units_speed_title">Wind speed</string>
    <string name="preferences_units_pressure_title">Atmospheric pressure</string>
    <string name="preferences_units_time_title">Time format</string>
</resources>