<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <paweltypiak.matweather.settingsActivityInitializing.dialogPreferencesInitializing.DefaultLocationDialogPreference
        android:key="@string/preferences_default_location_key"
        android:title="@string/preferences_defeault_location_title"
        />
    <paweltypiak.matweather.settingsActivityInitializing.dialogPreferencesInitializing.GeolocalizationMethodDialogPreference
        android:key="@string/preferences_geolocalization_method_key"
        android:title="@string/preferences_geolocalization_method_title"
        />
    <Preference
        android:key="@string/preferences_units_key"
        android:title="@string/preferences_units_title"
        android:summary="@string/preferences_units_summary"/>
    <paweltypiak.matweather.settingsActivityInitializing.dialogPreferencesInitializing.LanguageVersionDialogPreference
        android:key="@string/preferences_language_version_key"
        android:title="@string/preferences_language_version_title"
        />
</PreferenceScreen>