<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Paweł Typiak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_drawer_locations_group_item">
    <menu>
        <item
            android:id="@+id/nav_button_geolocalization"
            android:icon="@drawable/location_icon"
            android:checkable="false"
            android:title="@string/nav_drawer_geolocalization" />
        <item
            android:id="@+id/nav_button_favourites"
            android:icon="@drawable/favourites_icon"
            android:checkable="false"
            android:title="@string/nav_drawer_favourites" />
    </menu>
    </item>
    <item android:title="@string/nav_drawer_others_group_item">
        <menu>
            <item
                android:id="@+id/nav_button_settings"
                android:icon="@drawable/settings_icon"
                android:checkable="false"
                android:title="@string/nav_drawer_settings" />
            <item
                android:id="@+id/nav_button_feedback"
                android:icon="@drawable/feedback_icon"
                android:checkable="false"
                android:title="@string/nav_drawer_feedback" />
            <item
                android:id="@+id/nav_button_about"
                android:icon="@drawable/info_icon"
                android:checkable="false"
                android:title="@string/nav_drawer_about" />
            <item
                android:id="@+id/nav_button_author"
                android:icon="@drawable/author_icon"
                android:checkable="false"
                android:title="@string/nav_drawer_author" />
        </menu>
    </item>
</menu>
