<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/author_dialog_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dialog_margin_size"
        android:layout_marginRight="@dimen/dialog_margin_size"
        android:layout_marginTop="@dimen/dialog_margin_size"
        android:id="@+id/author_dialog_mail_layout">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_shape"
            android:id="@+id/author_dialog_mail_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:id="@+id/author_dialog_mail_text_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/dialog_text_size"
                android:text="@string/author_dialog_mail_address"
                android:textColor="@color/textPrimaryLightBackground"
                android:id="@+id/author_dialog_mail_address_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/dialog_text_size"
                android:text="@string/author_dialog_mail_description"
                android:textColor="@color/textSecondaryLightBackground"
                android:id="@+id/author_dialog_mail_description_text"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dialog_margin_size"
        android:layout_marginRight="@dimen/dialog_margin_size"
        android:id="@+id/author_dialog_github_layout">
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/circle_shape"
            android:id="@+id/author_dialog_github_image"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="16dp"
            android:orientation="vertical"
            android:id="@+id/author_dialog_github_text_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/dialog_text_size"
                android:text="@string/author_dialog_github"
                android:textColor="@color/textPrimaryLightBackground"
                android:id="@+id/author_dialog_github_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textSize="@dimen/dialog_text_size"
                android:text="@string/author_dialog_github_description"
                android:textColor="@color/textSecondaryLightBackground"
                android:id="@+id/author_dialog_github_description_text"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>