<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Paweł Typiak
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_location_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dialog_margin_size"
    android:paddingRight="@dimen/dialog_margin_size"
    android:paddingTop="@dimen/dialog_margin_top_size"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/edit_location_dialog_inner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/edit_location_dialog_title_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edit_location_dialog_location_title_bottom_margin"
            android:layout_gravity="center"
            android:lines="1"
            android:textStyle="bold"
            android:textColorHint="@color/textDisabledLightBackground"
            android:textColor="@color/textSecondaryLightBackground"
            android:hint="@string/edit_location_dialog_header_edit_text_hint"
            />
        <EditText
            android:id="@+id/edit_location_dialog_subtitle_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:layout_marginBottom="@dimen/edit_location_dialog_location_subtitle_bottom_margin"
            android:layout_gravity="center"
            android:lines="1"
            android:textColorHint="@color/textDisabledLightBackground"
            android:textColor="@color/textSecondaryLightBackground"
            android:hint="@string/edit_location_dialog_subheader_edit_text_hint"
            />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/edit_location_dialog_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:theme="@style/CheckBoxStyle"
            android:textColor="@color/textSecondaryLightBackground"
            android:textSize="@dimen/dialog_text_size"
            android:text="@string/add_location_dialog_checkbox_message"/>
    </LinearLayout>
</RelativeLayout>