<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/author_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dialog_margin_top_size"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:id="@+id/author_dialog_email_layout"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/author_dialog_list_item_height"
            android:paddingLeft="@dimen/dialog_margin_size"
            android:paddingRight="@dimen/dialog_margin_size"
            >
            <FrameLayout
                android:layout_width="@dimen/author_dialog_icons_background_size"
                android:layout_height="@dimen/author_dialog_icons_background_size"
                android:layout_gravity="center"
                android:background="@drawable/blue_circle_background">
                <ImageView
                    android:id="@+id/author_dialog_email_image"
                    android:layout_width="@dimen/author_dialog_icons_size"
                    android:layout_height="@dimen/author_dialog_icons_size"
                    android:layout_gravity="center"
                    android:src="@drawable/email_icon"
                    android:tint="@color/white"
                    />
            </FrameLayout>
            <LinearLayout
                android:id="@+id/author_dialog_mail_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <paweltypiak.weatherial.customViews.RobotoMediumFontTextView
                    android:id="@+id/author_dialog_mail_primary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="@dimen/dialog_text_size"
                    android:text="@string/author_dialog_mail_address"
                    android:textColor="@color/textPrimaryLightBackground"
                    android:lines="1"
                    android:ellipsize="end"
                    />
                <TextView
                    android:id="@+id/author_dialog_mail_secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="@dimen/dialog_text_size"
                    android:text="@string/author_dialog_mail_description"
                    android:textColor="@color/textSecondaryLightBackground"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/author_dialog_github_layout"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:paddingLeft="@dimen/dialog_margin_size"
            android:paddingRight="@dimen/dialog_margin_size"
            android:layout_below="@+id/author_dialog_email_layout"
            >
            <FrameLayout
                android:layout_width="@dimen/author_dialog_icons_background_size"
                android:layout_height="@dimen/author_dialog_icons_background_size"
                android:layout_gravity="center"
                android:background="@drawable/blue_circle_background">
                <ImageView
                    android:id="@+id/author_dialog_github_image"
                    android:layout_width="@dimen/author_dialog_icons_size"
                    android:layout_height="@dimen/author_dialog_icons_size"
                    android:layout_gravity="center"
                    android:src="@drawable/github_icon"
                    android:tint="@color/white"
                    />
            </FrameLayout>
            <LinearLayout
                android:id="@+id/author_dialog_github_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                >
                <paweltypiak.weatherial.customViews.RobotoMediumFontTextView
                    android:id="@+id/author_dialog_github_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="@dimen/dialog_text_size"
                    android:text="@string/author_dialog_github"
                    android:textColor="@color/textPrimaryLightBackground"
                    android:lines="1"
                    android:ellipsize="end"
                    />
                <TextView
                    android:id="@+id/author_dialog_github_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="@dimen/dialog_text_size"
                    android:text="@string/author_dialog_github_description"
                    android:textColor="@color/textSecondaryLightBackground"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/author_dialog_email_button_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/author_dialog_list_item_height"
        android:background="?selectableItemBackground">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/author_dialog_list_item_height"
        android:layout_below="@+id/author_dialog_email_button_layout"
        android:background="?selectableItemBackground"
        android:id="@+id/author_dialog_github_button_layout">
    </RelativeLayout>
</RelativeLayout>